--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,3 +1,6 @@
+---
+import '@fontsource-variable/afacad';
+---
 <!doctype html>
 <html lang="en">
 	<head>
@@ -5,7 +8,7 @@
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>Farmasol</title>
 	</head>
 	<body>
 		<slot />
@@ -13,10 +16,13 @@
 </html>
 
 <style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
+	html{
+		margin: 0px;
+	}
+
+	body{
+	
+	font-family: 'Afacad-Variable',system-ui,sans-serif;
+	display:flex;
 	}
 </style>
