Half hero section

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,18 +11,18 @@ import '@fontsource-variable/afacad';
 		<title>Farmasol</title>
 	</head>
 	<body>
-		<slot />
+		<div>
+			<slot />
+		</div>
 	</body>
 </html>
 
 <style>
 	html{
-		margin: 0px;
 	}
 
 	body{
 	
 	font-family: 'Afacad-Variable',system-ui,sans-serif;
-	display:flex;
 	}
 </style>
