--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,12 +2,20 @@
 import Welcome from '@/components/Welcome.astro';
 import Layout from '@/layouts/Layout.astro';
 import Header from '@/components/Header.astro';
+import Hero from '@/components/Hero.astro';
+import Carousel from '@/components/Carousel.astro';
 import '@/styles/globals.css';
+import Footer from '@/components/Footer.astro';
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
 <Layout>
+	<div class="flex flex-col space-y-8">
 	<Header />
+		<Hero />
+	<Carousel />
+	<Footer />
+	</div>
 </Layout>
