Fixing landing page

--- a/src/components/Carousel.astro
+++ b/src/components/Carousel.astro
@@ -2,14 +2,18 @@
 import { CarouselWrapper } from "../components/ui/CarouselWrapper";
 
 const carouselItems = [
-  { src: "../../public/img/Medicina1.png", alt: "Slide 1" },
-  { src: "../../public/img/Medicina1.png", alt: "Slide 1" },
-  { src: "../../public/img/Medicina1.png", alt: "Slide 1" }
+  { src: "img/Medicina1.png", alt: "Slide 1" },
+  { src: "img/Medicina1.png", alt: "Slide 1" },
+  { src: "img/Medicina1.png", alt: "Slide 1" },
+  { src: "img/Medicina1.png", alt: "Slide 1" },
+  { src: "img/Medicina1.png", alt: "Slide 1" },
+  { src: "img/Medicina1.png", alt: "Slide 1" }
+
 ];
 ---
 
-<div class=" max-w-xs mx-auto">
-  <div class="max-w-[1440px]">
+<div class=" max-w-6xl w-full mx-auto">
+  <div class="">
     <CarouselWrapper items={carouselItems} client:load />
   </div>
 </div>
