--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,28 +6,20 @@ import { NavigationMenuWrapper } from "../components/ui/NavigationMenuWrapper";
 
 ---
 
-<header class="flex flex-col py-6 bg-white shadow-xl shadow-orange-300">
-  <div class="max-w-[1440px] px-[150px]">
+<header class="z-50 bg-white shadow-xl shadow-orange-300">
+  <div class="container mx-auto flex flex-col max-w-6xl items-center justify-between py-6 px-4">
   <div class="flex justify-between w-full">
-    <img src="../../public/img/Logo.png" alt="Logo Farmasol" />
+    <img src="img/Logo.png" alt="Logo Farmasol" />
     <div>
       <Button variant="outline"><Circleuser />Admin</Button>
       <Button variant="outline"><Shoppingcart />0</Button>
     </div>
   </div>
-      <div class="mt-4 flex justify-between w-full"> {/* Added w-full here */}
-    <div class="flex justify-stretch">
+      <div class="container mt-4 items-center flex justify-between w-full"> {/* Added w-full here */}
       <Button variant="ghost" class=" text-center">Antibióticos</Button>
-    </div>
-    <div class="flex justify-stretch">
       <Button variant="ghost" class=" text-center">Antibióticos</Button>
-    </div>
-    <div class="flex justify-stretch">
       <Button variant="ghost" class=" text-center">Antibióticos</Button>
-    </div>
-    <div class="flex justify-stretch">
       <Button variant="ghost" class=" text-center">Antibióticos</Button>
-    </div>
 
 
 
