--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,8 +4,8 @@ import { Button } from "../components/ui/button";
 ---
 
 
-<div class="flex flex-col bg-orange-100 justify-between pt-20 pb-8 space-y-20 max-w-[1440px] px-[150px]">
-  <div class="flex flex-row space-x-80">
+<div class="flex flex-col bg-orange-100 justify-between items-center pt-20 pb-8 space-y-20">
+  <div class="container flex flex-row justify-between max-w-6xl items-center">
     <div class="flex flex-col">
       <h3 class="font-bold text-center">CATEGORIAS</h3>
       <Button variant="link" class=" text-center">Antibióticos</Button>
@@ -20,7 +20,7 @@ import { Button } from "../components/ui/button";
       <Button variant="link" class=" text-center">Antibióticos</Button>
 
     </div>
-    <img src="../../public/img/Unilogo.png" alt="Logo Farmasol" />
+    <img src="img/Unilogo.png" alt="Logo Farmasol" />
 
   </div>
   <div class="text-sm text-center">
