--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -3,13 +3,13 @@ import { Input } from "../components/ui/input.tsx"
 import SearchIcon from "../icons/SearchIcon.astro"
 ---
 
-<div class="flex flex-col object-cover object-top" style="background-image: url(@../../public/img/banner.jpg)">
+<div class="flex flex-col object-cover object-top" style="background-image: url(img/banner.jpg)">
   <div class="bg-radial bg-gradient-to-r from-orange-800 via-orange-800/60 to-orange-800 h-m py-20">
-  <div class="max-w-[1440px] px-[150px]">
-    <div class="px-[200px]">
+    <div class="container mx-auto flex flex-col max-w-6xl items-center px-[250px]">
+    <div class="">
       <h1 class="text-white text-4xl font-bold text-center mb-4">COMPRA TUS MEDICINAS ESENCIALES</h1>
     </div>
-    <div class="px-[300px]">
+    <div class="w-full">
       <!-- Use flex container -->
         <Input placeholder="🔍 Busca tu medicina" class="flex-1 border-none outline-none focus:ring-0" />
     </div>
